rest/rest-deployment.yaml
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: backend-dep
spec:
  selector:
    matchLabels:
      app: demucs
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: demucs
        tier: backend
    spec:
      containers:
      - name: demucs-rest
        image: rachna27/demucs-rest:latest
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 5000
---
