rest/rest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  labels:
    app: demucs
    tier: backend
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: demucs
    tier: backend
---
